调整了顺序

--- a/03-VersionControl.Rmd
+++ b/03-VersionControl.Rmd
@@ -1,4 +1,4 @@
-# Git
+# Git & Version Control 
 
 本部分主要介绍Git。英文Git教程参见[Get started with GitHub | Happy Git and GitHub for the useR](https://happygitwithr.com/)
 
